Fix foul counting, fix screen lock on visibility change

--- a/resources/scss/_game.scss
+++ b/resources/scss/_game.scss
@@ -62,7 +62,7 @@
     }
 
     .name {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
         line-height: 1;
         text-align: center;
     }
@@ -95,7 +95,7 @@
     align-items: center;
     justify-content: center;
     gap: .4rem;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     text-align: center;
     width: 100%;
     padding: .2rem 0 .4rem;
